fix footer align

--- a/skin/assets/scss/_footer.scss
+++ b/skin/assets/scss/_footer.scss
@@ -7,4 +7,10 @@ footer {
       text-decoration: underline;
     }
   }
+  ul.menu {
+    text-align: center;
+    li {
+      display: inline-block;
+    }
+  }
 }
